# dblinter

./: .gitignore  Cargo.toml
.devcontainer/: .bashrc  .env  .gitconfig  Dockerfile  devcontainer.json  docker-compose.yml
crates/core/: Cargo.toml
crates/core/src/: client.rs  error.rs  inspector.rs  lib.rs  linter.rs  problem.rs  report.rs  to_sql.rs
crates/core/tests/: integration.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros_core/: Cargo.toml
crates/macros_core/src/: attrs.rs  client.rs  flag.rs  lib.rs
crates/macros_fixture/: Cargo.toml
crates/macros_fixture/src/: lib.rs
crates/macros_problem/: Cargo.toml
crates/macros_problem/src/: expand.rs  field.rs  item.rs  lib.rs
crates/macros_problem/templates/test/: migration.sql  query.sql  rollback.sql
crates/macros_problem/tests/: problem.rs
templates/test_column_limit_missed/: message.txt  migration.sql  query.sql  rollback.sql
templates/test_primary_key_missed/: message.txt  query.sql
