[package]
name = "macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["linter"]
linter = []
problem = ["dep:macros_problem"]

[dependencies]
macros_core = { path = "../macros_core" }
macros_problem = { path = "../macros_problem", optional = true }
